Separate imageName, tag and digest